added new filed for lite website (mobile)

--- a/data/countries.html
+++ b/data/countries.html
@@ -7,8 +7,10 @@
 </head>
 
 <body>
-	<div class="naviBar">
+	<div class="naviBarBg">
+		<div class="naviBar">
 	
+		</div>
 	</div>
 
 	<h1>
@@ -27,7 +29,6 @@
 		<tr onmouseover="ChangeColor(this, true);" 
               onmouseout="ChangeColor(this, false);" 
               onclick="DoNav('./eg/activistsList.html');">
-		<td>
 		<td><div class="flag"><img src="../images/egFlag.gif" alt="Egypt Flag"/></div></td>
 		<td><h2>
 			<script type="text/javascript">
@@ -38,14 +39,11 @@
 			</script>
 		</h2></td>
 	</tr>
-	</table>
 
 	<!-- KSA-->
-	<table>
-		<tr onmouseover="ChangeColor(this, true);" 
+	<tr onmouseover="ChangeColor(this, true);" 
               onmouseout="ChangeColor(this, false);" 
               onclick="DoNav('./ksa/activistsList.html');">
-		<td>
 		<td><div class="flag"><img src="../images/ksaFlag.gif" alt="KSA Flag"/></div></td>
 		<td><h2>
 			<script type="text/javascript">
@@ -55,12 +53,10 @@
 					document.write("KSA");
 			</script>
 		</h2></td>
-	</tr>
-	</table>	
+	</tr>	
 
-	<!-- UAE-->
-	<table>		
-		<tr onmouseover="ChangeColor(this, true);" 
+	<!-- UAE-->	
+	<tr onmouseover="ChangeColor(this, true);" 
               onmouseout="ChangeColor(this, false);" 
               onclick="DoNav('./uae/activistsList.html');">
 		<td><div class="flag"><img src="../images/uaeFlag.gif" alt="UAE Flag"/></div></td>
@@ -72,12 +68,10 @@
 					document.write("UAE");
 			</script>
 		</h2></td>
-	</tr>
-	</table>	
+	</tr>	
 
 	<!--Qatar-->
-	<table>
-		<tr onmouseover="ChangeColor(this, true);" 
+	<tr onmouseover="ChangeColor(this, true);" 
               onmouseout="ChangeColor(this, false);" 
               onclick="DoNav('./qatar/activistsList.html');">
 		<td><div class="flag"><img src="../images/qatarFlag.gif" alt="Qatar Flag"/></div></td>		
@@ -89,12 +83,10 @@
 					document.write("Qatar");
 			</script>
 		</h2></td>
-	</tr>
-	</table>		
+	</tr>		
 
-	<!--Kuwait-->	
-	<table>		
-		<tr onmouseover="ChangeColor(this, true);" 
+	<!--Kuwait-->			
+	<tr onmouseover="ChangeColor(this, true);" 
               onmouseout="ChangeColor(this, false);" 
               onclick="DoNav('./kuwait/activistsList.html');">
 		<td><div class="flag"><img src="../images/kuwaitFlag.gif" alt="kuwait Flag"/></div></td>
@@ -106,13 +98,11 @@
 					document.write("Kuwait");
 			</script>
 		</h2></td>
-	</tr>
-	</table>	
+	</tr>	
 
 
 	<!--Jordan-->	
-	<table>
-		<tr onmouseover="ChangeColor(this, true);" 
+	<tr onmouseover="ChangeColor(this, true);" 
               onmouseout="ChangeColor(this, false);" 
               onclick="DoNav('./jordan/activistsList.html');">
 		<td><div class="flag"><img src="../images/jordanFlag.gif" alt="Jordan Flag"/></div></td>		
@@ -125,12 +115,10 @@
 					document.write("Jordan");
 			</script>
 		</h2></td>
-		</tr>
-	</table>	
+	</tr>	
 
 	<!--US n Canada-->	
-	<table>
-		<tr onmouseover="ChangeColor(this, true);" 
+	<tr onmouseover="ChangeColor(this, true);" 
               onmouseout="ChangeColor(this, false);" 
               onclick="DoNav('./usaNcanada/activistsList.html');">
 		<td><div class="flag"><img src="../images/usFlag.gif" alt="US and Canada Flag"/></div></td>
@@ -142,12 +130,10 @@
 					document.write("US & Canada");
 			</script>
 		</h2></td>
-	</tr>
-	</table>	
+	</tr>	
 	
 	<!--AnyWhere-->
-	<table>
-		<tr onmouseover="ChangeColor(this, true);" 
+	<tr onmouseover="ChangeColor(this, true);" 
               onmouseout="ChangeColor(this, false);" 
               onclick="DoNav('./anywhere/activistsList.html');">
 		<td><div class="flag"><img src="../images/anywhereFlag.gif" alt="Anywhere Flag"/></div></td>		
@@ -160,9 +146,12 @@
 			</script>
 		</h2></td>
 	</tr>
+	
 	</table>		
 	
-	</div>
+	</div><!--End of main-->
+	
+	<div class="foo">product of <a href="http://innozones.com"><font color="#ff8d1d"/>innozones </a></div>
 
 </body>
 
