--- a/data/eg/RHC/RHC.html
+++ b/data/eg/RHC/RHC.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-	<div class="naviBar">
-		<a class="button" href="../activistsList.html">
-		<div class="flag"><img src="../../../images/backButton.png" alt="backButton"/></div>
-		</a>
+	<div class="naviBarBg">
+		<div class="naviBar">
+			<a class="button" href="../activistsList.html">
+			<div class="flag"><img src="../../../images/backButton.png" alt="backButton"/></div>
+			</a>
+		</div>
 	</div>
 	
 	<h1>
@@ -77,6 +79,8 @@
 	
 
 	</div>
+	
+	<div class="foo">product of <a href="http://innozones.com"><font color="#ff8d1d"/>innozones </a></div>
 </body>
 
 </html>
