--- a/data/ksa/activistsList.html
+++ b/data/ksa/activistsList.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-	<div class="naviBar">
-		<a class="button" href="../countries.html">
-		<div class="flag"><img src="../../images/backButton.png" alt="backButton"/></div>
-		</a>
+	<div class="naviBarBg">
+		<div class="naviBar">
+			<a class="button" href="../countries.html">
+			<div class="flag"><img src="../../images/backButton.png" alt="backButton"/></div>
+			</a>
+		</div>
 	</div>
 
 	<h1>
@@ -25,7 +27,7 @@
 	<div class="main">
 
 	<a class="button" href="./wamy/wamy.html">
-		<div class="flag"><img src="./wany/wamyLogo.jpg" alt="الندوة العالمية للشباب الإسلامي"/></div>
+		<div class="flag"><img src="wamy/wamyLogo.jpg" alt="الندوة العالمية للشباب الإسلامي"/></div>
 		<h2>
 			<script type="text/javascript">
 				if(getLanguage() == "Arabic")
@@ -37,7 +39,7 @@
 	</a>
 
 	<a class="button" href="./ir/ir.html">
-		<div class="flag"><img src="./ir/irLogo.png" alt="هيئة الإغاثة الإسلامية العالمية"/></div>
+		<div class="flag"><img src="ir/irLogo.jpg" alt="هيئة الإغاثة الإسلامية العالمية"/></div>
 		<h2>
 			<script type="text/javascript">
 				if(getLanguage() == "Arabic")
@@ -49,7 +51,7 @@
 	</a>
 	
 	</div>
-
+	<div class="foo">product of <a href="http://innozones.com"><font color="#ff8d1d"/>innozones </a></div>
 	
 
 </body>
