--- a/data/ksa/wamy/wamy.html
+++ b/data/ksa/wamy/wamy.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-	<div class="naviBar">
-		<a class="button" href="../activistsList.html">
-		<div class="flag"><img src="../../../images/backButton.png" alt="backButton"/></div>
-		</a>
+	<div class="naviBarBg">
+		<div class="naviBar">
+			<a class="button" href="../activistsList.html">
+			<div class="flag"><img src="../../../images/backButton.png" alt="backButton"/></div>
+			</a>
+		</div>
 	</div>
 
 	<h1>
@@ -26,7 +28,7 @@
 
 	<div class="phoneNumber"><a href="tel://012050000">012050000<img src="../../../images/phoneNumber.png"/></a></div>
 
-	<div class="faxNumber"><a href="tel://012050011">012050011</a><div>
+	<div class="faxNumber"><a href="tel://012050011">012050011</a></div>
 
 	<div>
 		<h3>
@@ -56,7 +58,11 @@
 
 	</div>
 
-	</div>
+	</div><!--End of main-->
+	
+	
+	<div class="foo">product of <a href="http://innozones.com"><font color="#ff8d1d"/>innozones </a></div>
+	
 </body>
 
 </html>
