--- a/data/qatar/qc/qc.html
+++ b/data/qatar/qc/qc.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-	<div class="naviBar">
-		<a class="button" href="../activistsList.html">
-		<div class="flag"><img src="../../../images/backButton.png" alt="backButton"/></div>
-		</a>
+	<div class="naviBarBg">
+		<div class="naviBar">
+			<a class="button" href="../activistsList.html">
+			<div class="flag"><img src="../../../images/backButton.png" alt="backButton"/></div>
+			</a>
+		</div>
 	</div>
 
 	<h1>
@@ -50,7 +52,7 @@
 	</script>
 	<br>
 	Qtel
-	<div class="smsNumber"><a href="sms://92331">92331<img src="../../../images/smsNumber.png"/></a></div>
+	<div class="smsNumber"><a href="sms:92331">92331<img src="../../../images/smsNumber.png"/></a></div>
 
 	<script type="text/javascript">
 		if(getLanguage() == "Arabic")
@@ -60,7 +62,7 @@
 	</script>
 	<br><br>
 	Vodafone
-	<div class="smsNumber"><a href="sms://97771">97771<img src="../../../images/smsNumber.png"/></a></div>
+	<div class="smsNumber"><a href="sms:97771">97771<img src="../../../images/smsNumber.png"/></a></div>
 	<script type="text/javascript">
 		if(getLanguage() == "Arabic")
 			document.write("مبلغ 5 درهم");
@@ -80,6 +82,7 @@
 	</a></div>
 
 	</div>
+	<div class="foo">product of <a href="http://innozones.com"><font color="#ff8d1d"/>innozones </a></div>
 </body>
 
 </html>
