--- a/data/usaNcanada/stc/stc.html
+++ b/data/usaNcanada/stc/stc.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-	<div class="naviBar">
-		<a class="button" href="../activistsList.html">
-		<div class="flag"><img src="../../../images/backButton.png" alt="backButton"/></div>
-		</a>
+	<div class="naviBarBg">
+		<div class="naviBar">
+			<a class="button" href="../activistsList.html">
+			<div class="flag"><img src="../../../images/backButton.png" alt="backButton"/></div>
+			</a>
+		</div>
 	</div>
 
 	<h1>
@@ -31,8 +33,10 @@
 				document.write("You can donate $ 10 to texting SURVIVE to 20222");
 		</script>
 		<br>
-		<a href="sms://27722"><img src="../../../images/smsNumber.png"/></a>
+		<a href="sms:27722"><img src="../../../images/smsNumber.png"/></a>
 	</div>
+	
+	<div class="foo">product of <a href="http://innozones.com"><font color="#ff8d1d"/>innozones </a></div>
 
 
 </body>
