--- a/data/usaNcanada/activistsList.html
+++ b/data/usaNcanada/activistsList.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-	<div class="naviBar">
-		<a class="button" href="../countries.html">
-		<div class="flag"><img src="../../images/backButton.png" alt="backButton"/></div>
-		</a>
+	<div class="naviBarBg">
+		<div class="naviBar">
+			<a class="button" href="../countries.html">
+			<div class="flag"><img src="../../images/backButton.png" alt="backButton"/></div>
+			</a>
+		</div>
 	</div>
 	
 	<h1>
@@ -49,6 +51,8 @@
 	</a>
 
 	</div>
+	
+	<div class="foo">product of <a href="http://innozones.com"><font color="#ff8d1d"/>innozones </a></div>
 
 	
 
