added choose lang

--- a/data/anywhere/activistsList.html
+++ b/data/anywhere/activistsList.html
@@ -10,7 +10,7 @@
 	<div class="naviBarBg">
 		<div class="naviBar">
 			<a class="button" href="../activistsList.html">
-			<div class="flag"><img src="../../../images/backButton.png" alt="backButton"/></div>
+			<div class="flag"><img src="../../images/backButton.png" alt="backButton"/></div>
 			</a>
 		</div>
 	</div>
