Modified Emirates Arabic Name

--- a/data/countries.html
+++ b/data/countries.html
@@ -63,7 +63,7 @@
 		<td><h2>
 			<script type="text/javascript">
 				if(getLanguage() == "Arabic")
-					document.write("الأمارات ");
+					document.write("الإمارات ");
 				else if(getLanguage() == "English")
 					document.write("UAE");
 			</script>
