added Eidya category in Egypt

--- a/data/eg/activistsList.html
+++ b/data/eg/activistsList.html
@@ -50,6 +50,17 @@
 		</h2>
 	</a>
 	
+	<a class="button" href="./Eidya/Eidya.html">
+		<div class="flag"><img src="Eideya/Eideya.jpg" alt="العيدية"/></div>
+		<h2>
+			<script type="text/javascript">
+				if(getLanguage() == "Arabic")
+					document.write("عيد عليهم بخمسة جنيه");
+				else if(getLanguage() == "English")
+					document.write("Say Happy Eid and give'm 5 LE");
+			</script>
+		</h2>
+	</a>
 	</div>
 	<div class="foo">product of <a href="http://innozones.com"><font color="#ff8d1d"/>innozones </a></div>
 	
