Modified Eideya Egypt URL

--- a/data/eg/activistsList.html
+++ b/data/eg/activistsList.html
@@ -50,7 +50,7 @@
 		</h2>
 	</a>
 	
-	<a class="button" href="./Eidya/Eidya.html">
+	<a class="button" href="./Eidya/Eideya.html">
 		<div class="flag"><img src="Eideya/Eideya.jpg" alt="العيدية"/></div>
 		<h2>
 			<script type="text/javascript">
