--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 	<title>HelpSomalia</title>
 	<script src="scripts/js.js" type="text/javascript"></script>
 	<link href="./style/styles.css" rel="stylesheet" type="text/css" />
+	
+	<!-- Analytic Code !-->
+	<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-25448313-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 
 <body onload="splash()">
