--- a/data/countries.html
+++ b/data/countries.html
@@ -3,7 +3,24 @@
 	<title>HelpSomalia</title>
 	<meta http-equiv="content-type" content="text-html; charset=utf-8">
 	<link href="../style/styles.css" rel="stylesheet" type="text/css" />
-	<script type="text/javascript" src="../scripts/js.js"></script>
+	<script type="text/javascript" src="../scripts/js.js"></script>		
+	
+	<!-- Analytic Code !-->
+	<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-25448313-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+	</script>
+	<!-- End of Analytics Code !-->
+	
 </head>
 
 <body>
