--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
-</script>
+	</script>
+	<!-- End of Analytics Code !-->
 </head>
 
 <body onload="splash()">
